# rustic-journal

./: Cargo.toml  README.md  TODO.md  rustfmt.toml
journal/: Cargo.toml
journal-server/: Cargo.toml
journal-server/src/: config.rs  journal_server.rs  main.rs  timestamp.rs
journal/src/: journal.rs  lib.rs  log_format.rs  utils.rs
journalctl-sys/: Cargo.toml  build.rs
journalctl-sys/src/: helpers.rs  journal.rs  lib.rs
src/core/: lib.rs  utils.rs
src/core/journal/: journal.rs
src/core/utils/: c_error.rs  ffi_invoke.rs  macros.rs
tests/: journal_integration_tests.rs
