[package]
name = "rustic_journal"
version = "0.1.0"
authors = ["cogle <thecogle@gmail.com>"]
edition = "2018"
description = "A sever/client utility to hook into journalctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "journal"
]


[dependencies]
journal = {path = "./journal"}

