[package]
name = "journal-server"
version = "0.1.0"
authors = ["cogle <thecogle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
journal = { version = "0.1.0", path = "../journal" }
tokio = { version = "1.5.0", features = ["full"] }