[package]
name = "journal-server"
version = "0.1.0"
authors = ["cogle <thecogle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
journalctl-sys = { version = "0.1.0", path = "../journalctl-sys" }
journal = { version = "0.1.0", path = "../journal" }
tokio = { version = "1.5.0", features = ["full"] }
chrono = {version = "0.4.19"}
clap = "3.0.0-beta.2"