[package]
name = "journal"
version = "0.1.0"
authors = ["cogle <thecogle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = {version = "0.2.77"}
nix = { version = "0.18.0" }
journalctl-sys = { version = "0.1.0", path = "../journalctl-sys" }
